// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProxyWatcher event tests 🚨 Proxy Watcher: Admin Changed 1`] = `
[
  {
    "array": [
      "ethereum",
      5,
      [],
      4,
      "PROXY-ADMIN-CHANGED",
      "🚨 CSModule: Admin Changed",
      "The proxy admin for CSModule(0x4562c3e63c2e586cD1651B958C22F88135aCAd4f) has been changed from [0xc4DAB3a3ef68C6DFd8614a870D64D475bA44F164](https://etherscan.io/address/0xc4DAB3a3ef68C6DFd8614a870D64D475bA44F164) to [0xE92329EC7ddB11D25e25b3c21eeBf11f15eB325d](https://etherscan.io/address/0xE92329EC7ddB11D25e25b3c21eeBf11f15eB325d)",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "0xc4DAB3a3ef68C6DFd8614a870D64D475bA44F164,0xE92329EC7ddB11D25e25b3c21eeBf11f15eB325d",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
  {
    "array": [
      "ethereum",
      5,
      [],
      4,
      "PROXY-ADMIN-CHANGED",
      "🚨 CSAccounting: Admin Changed",
      "The proxy admin for CSAccounting(0xc093e53e8F4b55A223c18A2Da6fA00e60DD5EFE1) has been changed from [0xc4DAB3a3ef68C6DFd8614a870D64D475bA44F164](https://etherscan.io/address/0xc4DAB3a3ef68C6DFd8614a870D64D475bA44F164) to [0xE92329EC7ddB11D25e25b3c21eeBf11f15eB325d](https://etherscan.io/address/0xE92329EC7ddB11D25e25b3c21eeBf11f15eB325d)",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "0xc4DAB3a3ef68C6DFd8614a870D64D475bA44F164,0xE92329EC7ddB11D25e25b3c21eeBf11f15eB325d",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
  {
    "array": [
      "ethereum",
      5,
      [],
      4,
      "PROXY-ADMIN-CHANGED",
      "🚨 CSFeeDistributor: Admin Changed",
      "The proxy admin for CSFeeDistributor(0xD7ba648C8F72669C6aE649648B516ec03D07c8ED) has been changed from [0xc4DAB3a3ef68C6DFd8614a870D64D475bA44F164](https://etherscan.io/address/0xc4DAB3a3ef68C6DFd8614a870D64D475bA44F164) to [0xE92329EC7ddB11D25e25b3c21eeBf11f15eB325d](https://etherscan.io/address/0xE92329EC7ddB11D25e25b3c21eeBf11f15eB325d)",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "0xc4DAB3a3ef68C6DFd8614a870D64D475bA44F164,0xE92329EC7ddB11D25e25b3c21eeBf11f15eB325d",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
  {
    "array": [
      "ethereum",
      5,
      [],
      4,
      "PROXY-ADMIN-CHANGED",
      "🚨 CSFeeOracle: Admin Changed",
      "The proxy admin for CSFeeOracle(0xaF57326C7d513085051b50912D51809ECC5d98Ee) has been changed from [0xc4DAB3a3ef68C6DFd8614a870D64D475bA44F164](https://etherscan.io/address/0xc4DAB3a3ef68C6DFd8614a870D64D475bA44F164) to [0xE92329EC7ddB11D25e25b3c21eeBf11f15eB325d](https://etherscan.io/address/0xE92329EC7ddB11D25e25b3c21eeBf11f15eB325d)",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "0xc4DAB3a3ef68C6DFd8614a870D64D475bA44F164,0xE92329EC7ddB11D25e25b3c21eeBf11f15eB325d",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
]
`;

exports[`ProxyWatcher event tests 🚨 Proxy Watcher: Implementation Upgraded 1`] = `
[
  {
    "array": [
      "ethereum",
      5,
      [],
      4,
      "PROXY-UPGRADED",
      "🚨 CSModule: Implementation Upgraded",
      "The proxy implementation has been upgraded to 0x4d70efa74ec0ac3a5f759cc0f714c94cbc5cc4da",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "0x4D70efa74ec0Ac3a5f759cC0F714c94CBc5cc4da",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
  {
    "array": [
      "ethereum",
      5,
      [],
      4,
      "PROXY-UPGRADED",
      "🚨 CSAccounting: Implementation Upgraded",
      "The proxy implementation has been upgraded to 0x4d70efa74ec0ac3a5f759cc0f714c94cbc5cc4da",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "0x4D70efa74ec0Ac3a5f759cC0F714c94CBc5cc4da",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
  {
    "array": [
      "ethereum",
      5,
      [],
      4,
      "PROXY-UPGRADED",
      "🚨 CSFeeDistributor: Implementation Upgraded",
      "The proxy implementation has been upgraded to 0x4d70efa74ec0ac3a5f759cc0f714c94cbc5cc4da",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "0x4D70efa74ec0Ac3a5f759cC0F714c94CBc5cc4da",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
  {
    "array": [
      "ethereum",
      5,
      [],
      4,
      "PROXY-UPGRADED",
      "🚨 CSFeeOracle: Implementation Upgraded",
      "The proxy implementation has been upgraded to 0x4d70efa74ec0ac3a5f759cc0f714c94cbc5cc4da",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "0x4D70efa74ec0Ac3a5f759cC0F714c94CBc5cc4da",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
]
`;

exports[`ProxyWatcher event tests 🚨 Proxy Watcher: Paused 1`] = `
[
  {
    "array": [
      "ethereum",
      5,
      [],
      4,
      "CSModule-PAUSED",
      "🚨 CSModule: contract was paused",
      "For 336 hours",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "1209600",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
  {
    "array": [
      "ethereum",
      5,
      [],
      4,
      "CSAccounting-PAUSED",
      "🚨 CSAccounting: contract was paused",
      "For 336 hours",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "1209600",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
  {
    "array": [
      "ethereum",
      5,
      [],
      4,
      "CSFeeOracle-PAUSED",
      "🚨 CSFeeOracle: contract was paused",
      "For 336 hours",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "1209600",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
]
`;

exports[`ProxyWatcher event tests 🚨 Proxy Watcher: Resumed 1`] = `
[
  {
    "array": [
      "ethereum",
      5,
      [],
      4,
      "CSModule-UNPAUSED",
      "🚨 CSModule: contract was resumed",
      "Contract was resumed",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
  {
    "array": [
      "ethereum",
      5,
      [],
      4,
      "CSAccounting-UNPAUSED",
      "🚨 CSAccounting: contract was resumed",
      "Contract was resumed",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
  {
    "array": [
      "ethereum",
      5,
      [],
      4,
      "CSFeeOracle-UNPAUSED",
      "🚨 CSFeeOracle: contract was resumed",
      "Contract was resumed",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
]
`;
